added a list to push code

--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
         <h3>My First Git Project</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore, nesciunt officia ex quas sit quam natus deserunt in ducimus quibusdam? Aliquid similique earum nulla voluptatibus inventore. Totam nulla deserunt quisquam?</p>
     </div>
-    
+    <br>
+    <br>
+    <div class="dv">
+        <h3>How to push incremental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"add a meaningful commit massage"</li>
+            <li>git push</li>
+
+        </ul>
+    </div>
 </body>
 </html>
